[project]
name = "indy-gov-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modelcontextprotocol>=0.1.0",
    "requests>=2.32.3",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
